# MultiStack-Image-Processing

./: .gitignore  README.md  build.zig  build.zig.zon
ex01/: image_show.c
ex02/: build.zig  build.zig.zon
ex02/src/ex02/: main.zig
ex02/src/my_lib/: image.zig  my_lib.zig
ex02/src/my_lib/image_formats/: Netpbm.zig
ex03/: CHANGELOG.md  imageProcessingInHaskell.cabal
ex03/app/: Main.hs  Matrix.hs  PGM.hs
ex04/: Cargo.toml
ex04/src/: fft_wrapper.rs  main.rs
src/ex01/: main.zig
src/ex02/: main.zig
src/my_lib/: math.zig  my_lib.zig
src/my_lib/formats/: Netpbm.zig
trabalho-final/: presentation.jl
